Support a fragment (internal reference, #reference) in a reference to a resource that is a file.